--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@mui/x-data-grid": "^5.17.24",
-    "@nivo/bar": "^0.80.0",
-    "@nivo/core": "^0.80.0",
-    "@nivo/geo": "^0.80.0",
-    "@nivo/pie": "^0.80.0",
+    "@nivo/bar": "^0.55.0",
+    "@nivo/core": "^0.55.0",
+    "@nivo/geo": "^0.55.0",
+    "@nivo/pie": "^0.55.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -25,7 +26,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
